rev220 - [2012-04-28]
 - Updated itemInfo.lua with the item related updates from /data/ folder

rev219 - [2012-04-28]
 - Updated itemInfo.lua with the item related updates from /data/ folder

rev218 - [2012-04-28]
 - Added lua compiler in /tool/ folder for version 5.1.4

rev216 - [2012-04-23]
 - Imported all item infos from data folder to itemInfo.lua
 * this now supports items from pRO and iRO and probably other official servers

rev211 - [2012-04-19]
 - Added System/itemInfo.lua
 * this is the replacement for data/(id)num2item(displayname|resname|desc)table.txt and itemslotcountable.txt starting 2012-04-17 and up
 * this is does NOT include exclusive items from pRO and iRO, they will be imported later
 - Updated TownInfo.lua

rev209 - [2012-04-18]
 - 2012-04-18 kRO Patch lua and lub
 * new lua files weapontable_f and weapontable
 * new /System/ file will be committed tomorrow

rev202 - [2012-04-11]
 - 2012-04-10 kRO Patch lua and lub

rev196 - [2012-04-05]
 - Changed some msgstring_kr.lua strings to fit in the Shortcuts tab
 * not much of an issue so there will be no v2 for the lub

rev195 - [2012-04-05]
 - 2012-04-04 kRO Patch lua and lub

rev190 - [2012-03-29]
 - 2012-03-28 kRO Patch lua and lub

rev189 - [2012-03-22]
 - fixed a mistake in r187
 * I wasnt supposed to change that JT_MER_AMISTR
 * v2 of the lub archive is also added with the fix

rev187 - [2012-03-21]
 - 2012-03-21 kRO Patch lua and lub
 * this patch lub files includes the fix in stateiconinfo.lua last revision

rev183~184 - [2012-03-18]
 - Fixed a Crash while riding new mounts or sitting then Hovering the status icons
 * This bug exist since 2011-02-23 kRO Patch (r120) to latest
 * Please replace your statusiconinfo.lua to this.

rev177 - [2012-03-15]
 - 2012-03-14 kRO Patch lua and lub

rev176 - [2012-03-10]
 - Added version 2 Lua and Lub for 2012-03-07 kRO Patch
 * corrected a single mistake that causes the client to not run when launching

rev175 - [2012-03-10]