@@ -5586,7 +5586,7 @@ SKILL_DESCRIPT = {
 		"Duration:^777777 10 + 5*SkillLV sec ^000000",
 		"Effect:^777777 You automatically block attacks with a success chance of (5*SkillLV)%. This allows you to Auto Guard melee and ranged attacks with your two-handed sword.",
 		"This Skill also enables you to parry the following skills: Bash, Bowling Bash, Pierce, Spiral Pierce, Brandish Spear, Spear Boomerang, Shield Boomerang, Grand Cross, Asura Strike, Soul Breaker, Double Strafing, Arrow Shower and Investigate.",
-		"When you block you cannot attack (but unlike Auto Guard, there is no delay). Use this when you get mobbed. Requires One Hand or Two Hand sword^000000",
+		"When you block you cannot attack (but unlike Auto Guard, there is no delay). Use this when you get mobbed. Requires Two-handed Sword.^000000",
 		"[LV 1]^777777 Block Chance 5%, 15 Sec ^000000",
 		"[LV 2]^777777 Block Chance 10%, 20 Sec ^000000",
 		"[LV 3]^777777 Block Chance 15%, 25 Sec ^000000",
@@ -6311,7 +6311,8 @@ SKILL_DESCRIPT = {
 		"Duration:^777777 Instant ^000000",
 		"Effect:^777777 Extend your spear, and spin it in a spiral fashion to increase overall damage and ability to pierce. A more powerful version of Pierce which ignores DEF and VIT DEF and also stun-locks your opponent for 3 sec.",
 		"Damage is (100+50*SkillLV)% ATK. The attack is 5 hits with the damage divided evenly between the hits. However you can increase damage further by increasing the weight of your weapon (upgrades count too! LV 1 weapons +10/upgrade, LV 2 weapons +15/upgrade, LV 3 weapons +25/upgrade).",
-		"Although damage will increase with better skill level, so will the Cast Time / Cool Down. Aura Blade does not add damage to this skill. Recent tests revealed the following (rather complex) formula:",
+		"Although damage will increase with better skill level, so will the Cast Time / Cool Down. Requires One-handed or Two-handed Sword, also works with Spears.",
+		"Aura Blade does not add damage to this skill. Recent tests revealed the following (rather complex) formula:",
 		"[(80% of weapons weight times (100%+level*50%) + (round.down(STR/10^2) + Upgrade Damage) * size modifier (small 125%, medium 100%, large 75%)) * card factors (+20% and such) * element factors ]* 5 hits ^000000",
 		"[LV 1]^777777 150% ATK per attack ^000000",
 		"[LV 2]^777777 200% ATK per attack ^000000",
